// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MainMenuDropdown should be rendered correctly 1`] = `
<button
  className="container uui-button-box uui-enabled -clickable root type-primary"
  href={null}
  onClick={[Function]}
  role="button"
  tabIndex={0}
>
  <div
    className="container uui-icon uui-enabled"
    style={Object {}}
  >
    <SvgrURL
      className=""
    />
  </div>
</button>
`;

exports[`MainMenuDropdown should be rendered correctly 2`] = `
<button
  className="container uui-button-box uui-enabled -clickable root type-primary"
  href={null}
  onClick={[Function]}
  role="button"
  tabIndex={0}
>
  <div
    className="uui-caption"
  >
    Test button
  </div>
  <div
    className="container uui-icon uui-enabled"
    style={Object {}}
  >
    <SvgrURL
      className=""
    />
  </div>
</button>
`;
